# minitorch

./: .gitignore  README.md  requirements.txt  sentiment_model.npz  setup.cfg
.github/workflows/: minitorch.yml
examples/: run_mnist_multiclass.py  train_mnist.py  train_sentiment.py  train_sentiment_cnn.py  train_sentiment_rnn.py
minitorch/: __init__.py  autodiff.py  common_operators.py  cuda_conv.py  cuda_ops.py  dataloader.py  fast_conv.py  fast_ops.py  module.py  nn.py  operators.py  scalar.py  scalar_functions.py  tensor_data.py  tensor_functions.py  tensor_ops.py  testing.py
minitorch/backends/: cuda_conv.py  cuda_ops.py  fast_conv.py  fast_ops.py
minitorch/datasets/: mnist.py  uci_sentiment.py
minitorch/nn/: init.py  layers.py  loss.py  module.py  nn.py  optim.py
minitorch/scalar/: functions.py  scalar.py
minitorch/tensor/: data.py  functions.py  operators.py  tensor.py
project/: parallel_check.py  run_fast_tensor.py  run_manual.py  run_mnist_multiclass.py  run_scalar.py  run_tensor.py  run_torch.py
project/interface/: mlprimer.py  train.py
tests/: strategies.py  test_autodiff.py  test_conv.py  test_cuda_conv.py  test_module.py  test_nn.py  test_operators.py  test_scalar.py  test_tensor.py  test_tensor_data.py  test_tensor_general.py
